--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -5,26 +5,32 @@ global
 
 defaults
     mode http
-    timeout connect 5000ms
-    timeout client 50000ms
-    timeout server 50000ms
+    timeout connect 1800000ms
+    timeout client 1800000ms
+    timeout server 1800000ms
     default-server init-addr last,libc,none
 
 frontend http-in
-#        bind *:443 ssl crt /etc/ssl/cnp.sprc.samsung.pl/cnp.sprc.samsung.pl.pem
+        bind *:443 ssl crt /etc/ssl/e-luborzyca.pl/e-luborzyca.pl.pem
         bind *:80
         option forwardfor
-#        http-request set-header X-Forwarded-Proto https if { ssl_fc }
+        http-request redirect prefix http://%[hdr(host),regsub(^www\.,,i)] code 301 if { hdr_beg(host) -i www. }
+        http-request set-header X-Forwarded-Proto https if { ssl_fc }
+        http-request redirect scheme https code 301 unless { ssl_fc }
+
 
         #************#
         # ACL list   #
         #************#
         acl host_backend path -i -m beg /api/v1
+        acl host_adminmongo path -i -m beg /adminMongo
+
 
         #******************#
         # Select Backend   #
         #******************#
         use_backend backend        if host_backend
+        use_backend adminmongo     if host_adminmongo
         default_backend frontend
 
 
@@ -37,3 +43,5 @@ backend backend
 backend frontend
         server server1 frontend:3000 maxconn 32
 
+backend adminmongo
+        server server1 adminMongo:1234 maxconn 32
